# tipe_project

./: Cargo.toml  README.md
inputs/: circuit_tetra_1_arr.txt
src/: macros.rs  main.rs
src/datastructures/: bintree.rs  bsp.rs  kd_tree.rs  mod.rs  priority_queue.rs  r_tree.rs  skip_list.rs  traits.rs  union_find.rs
src/framework/: constraint.rs  fitness.rs  individual.rs  mod.rs  statistics.rs
src/geometry/: angles.rs  geometrical_queries.rs  mod.rs  obstacles.rs  point.rs  polygon_map_generator.rs  shapes.rs  space.rs  traits.rs  vecs.rs  workspace.rs
src/graphs/: graphs.rs  grid.rs  mod.rs  representation.rs  structs.rs  traits.rs  trees.rs
src/libs/: l_polyanya.rs  mod.rs
src/parallel/: mod.rs  structs.rs  utils.rs  vis_graphs.rs
src/path_planning/: accessibility_grid.rs  graphs_heuristics.rs  grid.rs  mod.rs  polyanya.rs  shortcuts.rs  visibility_graph.rs
src/render_3d/: cubes.rs  graphs.rs  grid.rs  mod.rs  paths.rs
src/svg/: curves.rs  graph.rs  grid.rs  mod.rs  object.rs  polyanya_interval_map.rs  rtree.rs
src/tests/: background.rs  mod.rs  test_3d.rs  test_3d_divers.rs  test_arms_simple.rs  test_base_reeds_shepp.rs  test_complex.rs  test_conv_path.rs  test_convergence_vitesse.rs  test_datastructures_2d.rs  test_datastructures_3d.rs  test_graph.rs  test_graph_2d.rs  test_line_sweep.rs  test_path_3d.rs  test_path_complex_2d.rs  test_path_grid_3d.rs  test_path_reeds_shepp.rs  test_path_rrt_3d.rs  test_path_simple_2d.rs  test_perf_path_2d.rs  test_perfs.rs  (+6 more)
tools/: benchs.py  image_converter.py  migrate_json.py  print_codes.py  stats.py
(+21 files in other folders)
